--- a/public/stylesheets/site.css
+++ b/public/stylesheets/site.css
@@ -68,7 +68,7 @@ a img {
 
 div.sidebar {
   background:            #000;
-  height:                200px;
+  height:                230px;
   width:                 35px;
   float:                 left;
   -moz-border-radius:    8px 0px 0 8px;
@@ -83,9 +83,12 @@ span.handle {
   color:             #d7007c;
   position:          relative;
   left:              0px;
-  bottom:            -162px;
+  bottom:            -192px;
   display:           block;
   max-width:         30px;
+}
+span.selected {
+  color: #fff;
 }
 
 div.title {
@@ -114,8 +117,12 @@ div.member {
   -webkit-border-radius: 10px;
   overflow:              hidden;
   width:                 400px;
-  max-height:            200px;
+  min-height:            230px;
   margin:                5px;
+}
+div.selected {
+  -moz-box-shadow:       0 10px 20px 1px #000;
+  -webkit-box-shadow:    0 10px 20px 1px #000;
 }
 
 label {
@@ -138,11 +145,13 @@ div.avatars img {
   border:                2px #ccc solid;
   -moz-border-radius:    5px;
   -webkit-border-radius: 5px;  
-  height:                90px;
+  height:                100px;
   width:                 auto;
-  min-width:             90px;
-  min-height:            90px;
   padding:               5px;
+}
+div.avatars img.multi {
+  min-width:             100px;
+  min-height:            100px;  
 }
 
 p.aliases {
