Cleaned up filter method Added no results message

--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -9,4 +9,5 @@
 <section id="accounts" class="hidden">
   <%= render :partial => 'account', :collection => @accounts %>
   <div class="clear"></div>
+  <h1 class="no_results">We couldn't find a developer by that name :(</h1>
 </section>
