--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,14 @@
     <div id="footer-padding"></div>
   </div>
   <footer id="site-footer">
-    &copy; <%= Time.now.strftime('%Y') %> Ruby Committers? MIT License? Who knows?
+    <section class="wrapper">
+      <div class="copyright">
+        &copy; <%= Time.now.strftime('%Y') %> Ruby Committers? MIT License? Who knows?
+      </div>
+      <div class="credits">
+        Designed <span class="amp">&amp;</span> developed by <a href="http://nicianbox.com">Nic Aitch</a> <span class="amp">&amp;</span> <a href="http://joesak.com">Joe Sak</a>
+      </div>
+    </section>
   </footer>
   <%= javascript_include_tag  'https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js',
                               'https://ajax.googleapis.com/ajax/libs/jqueryui/1/jquery-ui.min.js',
