REALLY fixed url this time

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
         &copy; <%= Time.now.strftime('%Y') %> Ruby Committers? MIT License? Who knows?
       </div>
       <div class="credits">
-        Designed <span class="amp">&amp;</span> developed by <a href="http://nicinanbox.com">Nic Aitch</a> <span class="amp">&amp;</span> <a href="http://joesak.com">Joe Sak</a>
+        Designed <span class="amp">&amp;</span> developed by <a href="http://nicinabox.com">Nic Aitch</a> <span class="amp">&amp;</span> <a href="http://joesak.com">Joe Sak</a>
       </div>
     </section>
   </footer>
