--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Ruby Committers</h1>
 <%= link_to 'fork me on github', 'http://github.com/tenderlove/rubycommitters.org' %>
-<ul>
+<ul class="committers">
 <%= render :partial => 'account', :collection => @accounts %>
 </ul>
