--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Ruby Committers</title>
-  <%= stylesheet_link_tag :all %>
-  <%= javascript_include_tag :defaults %>
-  <%= csrf_meta_tag %>
-  <%= analytics_tag %>
-</head>
-<body>
+  <head>
+    <title>Ruby Committers</title>
+    <%= stylesheet_link_tag :all %>
+    <%= javascript_include_tag :defaults %>
+    <%= csrf_meta_tag %>
+    <%= analytics_tag %>
+  </head>
+  <body>
 
-<%= yield %>
+    <div id="banner">
+      Ruby Committers
+    </div>
 
-</body>
+    <div id="main">
+      <%= yield %>
+    </div>
+
+  </body>
 </html>
