--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,8 @@
   <head>
     <title>Ruby Committers</title>
     <%= stylesheet_link_tag :all %>
-    <%= javascript_include_tag :defaults %>
+    <%= jquery_include_tag %>
+    <%= javascript_include_tag 'rails', 'application' %>
     <%= csrf_meta_tag %>
     <%= analytics_tag %>
   </head>
