First complete draft

--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -1,4 +1,22 @@
-<h1>Ruby Committers</h1>
+<ol id = "ruby_logo">
+  <li>R</li>
+  <li>u</li>
+  <li>b</li>
+  <li>y</li>
+</ol>
+<ol id = "committers_logo">
+  <li>C</li>
+  <li>o</li>
+  <li>m</li>
+  <li>m</li>
+  <li>i</li>
+  <li>t</li>
+  <li>t</li>
+  <li>e</li>
+  <li>r</li>
+  <li>s</li>
+</ol>
+
 <%= link_to 'Fork me on Github', 'http://github.com/tenderlove/rubycommitters.org' , :id => 'fork_me' %>
 <ul id = "committers">
   <%= render :partial => 'account', :collection => @accounts %>
